<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodSocial</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1498868727028766</string>
    <string name="normal">normal</string>
    <string name="FB">fb</string>
    <string name="login">登入</string>
    <string name="cancel">取消</string>
    <string name="accountName">帳號</string>
    <string name="password">密碼</string>
    <string name="signup">註冊</string>
    <string name="accountNamehint">帳號名稱</string>
    <string name="signUpbtn">註冊</string>
    <string name="postPageTitle">標題:</string>
    <string name="postPageAddress">地址:</string>
    <string name="postPage_content">內容</string>
    <string name="取消">cancel</string>
    <string name="enter">確定</string>
    <string name="groupadd_hint">新建群組:</string>

</resources>
