<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/RL_post_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/BT_post_back"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="back" />

        <Button
            android:id="@+id/BT_post_post"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/BT_post_back"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="post" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RL_post_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/RL_post_top"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" >

        <LinearLayout
            android:id="@+id/LL_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" >

            <TextView
                android:id="@+id/TV_post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postPageTitle" />

            <EditText
                android:id="@+id/ET_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_post_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL_post_title" >

            <TextView
                android:id="@+id/TV_post_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postPageAddress" />

            <EditText
                android:id="@+id/ET_post_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/LL_post_address" >

            <EditText
                android:id="@+id/ET_post_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/postPage_content"
                android:inputType="textMultiLine" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
